updated application dependency versions